# twitch-arbuz-bot

./: .coveragerc  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TODO.md  alembic.ini  config.py  container.py  container_runtime.py  database.py  dependencies.py  docker-compose.yml  exceptions.py  main.py  models.py  pyproject.toml  redis.conf  regenerate_bot_token.py  run-e2e-tests.sh  run-tests.sh  utils.py  vmagent.yml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 05836fed73a0_add_ai_sticker_reward_id_to_settings.py  068321f1996f_add_coins_count.py  19c7b255bfa3_add_links_to_tt_and_yt.py  1a876c5c1a91_fix_some_constrains.py  276858645260_add_personal_pasta.py  365262eac1fa_add_refs.py  38f67940c905_add_more_commands.py  492cf52bc513_update_ai_stickers_settings.py  4daf227758f9_add_supporters.py  52ef83f3fea6_add_donated_field.py  551c4c14e190_update_generated_sticker_table_with_.py  5752ecd4449a_add_user_balance.py  5efc3d960b84_add_ai_sticker_settings.py  5f063eb53813_add_overlays_last_usage_to_users.py  6817e6575d1e_add_feed_treat_and_pasta.py  697cc264199c_add_sum_ms_to_statistics.py  6af5e257d780_memealerts_oauth_upd.py  6ef0f77e971a_add_ma_currency_name_declensions.py  7fc59a9c8668_add_generated_images_cache.py  8f4a6b7c9d10_add_ai_sticker_settings.py  a1b2c3d4e5f6_add_enable_memealerts_link.py  a6e0792566da_add_dice_command.py  aef806c55ba8_add_tg_and_ds.py  afee89f89b8f_add_beta_and_followers.py  b069b4c5b500_create_users_table.py  b19801ec05ae_add_more_settings.py  b2c3d4e5f6a7_add_enable_links_command.py  b49d6c5ad5ac_add_ma_link.py  b7b5e3d6f5a1_add_chatbot_default_target_behaviour_.py  c4d5e6f7a8b9_add_statistics_table.py  c9b3f413f836_add_hugs.py  c9f1fa2629dd_move_links_to_table.py  d36a08db1931_upd_settings.py  dac2c35b2e38_upd_index_for_ma.py  dd15c348d6f6_add_last_interaction_date_to_users_model.py  e3996e8a002c_add_enable_bot.py  e5b36658a27b_add_auto_shoutout_on_raid.py  f24c3b6f49cb_memealerts_oauth.py  fc2350890e46_add_created_at_for_users.py
chat_bot/: bot.py  handlers.py
database/: database.py  encrypted_string.py  models.py
issues/: issues.py
routers/: frontend.py  helpers.py  routers.py  schemas.py  security_helpers.py  sse.py
routers/api/: admin_api.py  extension.py  slovotron_webhook.py  twitch_eventsub.py  user_api.py
routers/robots/: for_robots.py
routers/web/: extension.py  file_storage.py  memealerts_routes.py  obs_dock.py  overlays.py  pages.py  service_routes.py
routers/ws/: heat_proxy.py
schemas/: api.py  enums.py  memealerts.py  slovotron.py  twitch.py
services/: ai.py  cache.py  discord.py  eventsub_service.py  heat_upstream.py  image_resizer.py  memes.py  memes_v2.py  mqtt.py  redis_state_manager.py  s3.py  slovotron.py  sse_manager.py  statistics.py  stickers.py  stickers_processor.py
static/: 500.html  robots.txt  styles.css
static/ext_panel/: panel.html
static/js/: ai-stickers.js  heat-ws.js  pair.js  panel-scripts.js  star.js  stats.js  streamers.js  test.js
templates/: about.html  admin.html  ai_stickers.html  base.html  beta-test.html  debug.html  faq.html  index.html  jumping_chibi.html  main.html  memealerts-tutorial.html  panel.html  profile.html  roadmap.html  stats.html  streamer-commands.html  streamers.html
templates/docks/: slovotron.html
templates/overlays/: imggen.html  jumping-chibi.html  (+6 more)
tests/: conftest.py  test_chat_handlers.py  test_routes.py  test_test.py
twitch/: base_commands.py  bot.py  command.py  command_manager.py  handlers.py  something.py  state_manager.py  twitch.py  user_list_manager.py  utils.py
utils/: cryptography.py  db_session_mixin.py  enums.py  logging_conf.py  memealerts.py  memes.py  misc.py  overlays.py  streamers.py  streamers_sort.py
(+71 files in other folders)
