[tool.poetry]
name = "twitch-bot-panel"
version = "0.1.0"
description = "A control panel for a Twitch chatbot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
uvicorn = "^0.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.1"
twitchAPI = "4.5.0"
httpx = "^0.28.1"
jinja2 = "3.0.3"
itsdangerous = "2.2.0"
alembic = "^1.8.0"
python-multipart = "0.0.20"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
memealerts = "1.1.1"
cryptography = "^45.0.5"
sentry-sdk = "2.33.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"