[tool.poetry]
name = "twitch-bot-panel"
version = "1.0.0"
description = "A control panel for a Twitch chatbot"
authors = ["Quantum0 <quantum0@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
uvicorn = "^0.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.1"
twitchAPI = "^4.5.0"
httpx = "^0.28.1"
jinja2 = "3.0.3"
itsdangerous = "2.2.0"
alembic = "^1.8.0"
python-multipart = "0.0.20"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
memealerts = "1.1.3"
cryptography = "^45.0.5"
sentry-sdk = "2.33.0"
prometheus-fastapi-instrumentator = "7.1.0"
websockets = "15.0.1"
openai = "2.16.0"
aiomqtt = "2.5.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.6"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "3.15.0"
testcontainers = {extras = ["postgres"], version = "^4.12.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

[tool.mypy]
python_version = "3.11"
mypy_path = "."
plugins = ["pydantic.mypy"]
follow_untyped_imports = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    # "ANN", # flake8-annotations # TODO enable later
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # maccabe
    # "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "FAST", # fastapi
    "I", # isort
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "S", # flake8-bandit
    "T10", # flake8-debugger
    "T20", # flake8-print
    "UP", # pyupgrade
    "W", # pycodestyle
]